--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,18 @@
-<div>hello</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="header__title">TODO 서비스</div>
+      <div class="header__menu-button">menu</div>
+    </div>
+    <div class="kanban-board">
+      <div class="kanban-board__header">
+        <div class="search-box">Filter cards</div>
+      </div>
+      <div class="todo"></div>
+    </div>
+  </body>
+</html>
