style : Todo card 레이아웃 작성
- todo card 레이아웃 작성

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,21 @@
       <div class="kanban-board__header">
         <div class="search-box">Filter cards</div>
       </div>
-      <div class="todo"></div>
+      <div class="todo-list">
+        <div class="todo">
+          <div class="todo-header">
+            <div class="todo-header--total-count">3</div>
+            <div class="todo-header--title">해야할 일</div>
+            <div class="todo-header--add-button">+</div>
+            <div class="todo-header--delete-button">-</div>
+          </div>
+          <div class="todo-card">
+            <div class="todo-card--content">PR 날리기</div>
+            <div class="todo-card--writter">puba</div>
+            <div class="todo-card--delete-button">x</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
