--- a/todo.html
+++ b/todo.html
@@ -30,15 +30,33 @@
         </div>
         <!-- 컨텐츠 영역(카드) : 일단 형태만 -->
         <div class="flex-left">
+
+            <!-- 리스트뷰 1개 레이아웃 -->
             <div class="card">
+                <div class="card-header">
+                    <p class="title bold">해야할일</p>
+                    <button class="close-btn htop">
+                        <img src="/images/plus_btn.png">
+                        <img src="/images/close_btn.png">
+                    </button>
+                </div>
+
+                <!-- listView -->
                 <div class="list-view">
                     <p class="title"><img src="/images/list_btn.png"> 테스트 제목</p>
-                    <p class="sub-title font-15">Added by abc</p>
+
+                    <!-- listView 하위 태스크 리스트-->
+                    <ul class="task sub-title font-15">
+                        <li>하위 태스크</li>
+                    </ul>
+
+                    <p class="author sub-title font-15">Added by abc</p>
                     <button class="close-btn">
                         <img src="/images/close_btn.png">
                     </button>
                 </div>
             </div>
+
             <div class="card">
                 <div class="list-view">
 
