update README.md 1일차 한 일을 정리하였습니다.

--- a/todo.html
+++ b/todo.html
@@ -45,7 +45,7 @@
 
                 <!-- list-wrapper > (add-list-view) > list-view -->
                 <div class="list-wrapper" data="0">
-                    <div class="add-list-view">
+                    <div class="input-list-view">
                         <div class="list-input-wrapper">
                             <textarea class="list-input" data="0" type="text" maxlength="500"
                                 placeholder="Enter a note"></textarea>
@@ -83,8 +83,9 @@
                 </div>
             </div>
 
-            <!-- 리스트뷰 1개 레이아웃 -->
-            <div class="card">
+
+             <!-- 리스트뷰 1개 레이아웃 -->
+             <div class="card">
                 <div class="card-header">
                     <span class="card-count bold" data="0">3</span>
                     <span class="title bold">해야할일</span>
@@ -96,7 +97,7 @@
 
                 <!-- list-wrapper > (add-list-view) > list-view -->
                 <div class="list-wrapper" data="0">
-                    <div class="add-list-view">
+                    <div class="input-list-view">
                         <div class="list-input-wrapper">
                             <textarea class="list-input" data="0" type="text" maxlength="500"
                                 placeholder="Enter a note"></textarea>
@@ -132,11 +133,10 @@
                         </button>
                     </div>
                 </div>
-
             </div>
-            
-            <!-- 리스트뷰 1개 레이아웃 -->
-            <div class="card">
+
+             <!-- 리스트뷰 1개 레이아웃 -->
+             <div class="card">
                 <div class="card-header">
                     <span class="card-count bold" data="0">3</span>
                     <span class="title bold">해야할일</span>
@@ -148,7 +148,7 @@
 
                 <!-- list-wrapper > (add-list-view) > list-view -->
                 <div class="list-wrapper" data="0">
-                    <div class="add-list-view">
+                    <div class="input-list-view">
                         <div class="list-input-wrapper">
                             <textarea class="list-input" data="0" type="text" maxlength="500"
                                 placeholder="Enter a note"></textarea>
@@ -184,9 +184,7 @@
                         </button>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </div>
 </body>
