make todo layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,33 @@
       <div class="navbar-title">TODO 서비스</div>
       <div class="navbar-menu">menu</div>
     </div>
-    <div class="filterbar">
+    <div class="filter-contatiner">
     </div>
     <div class="contents">
+      <div class="todo-container">
+        <div class="todo-title">해야할일</div>
+        <div class="todo-contents">
+          <div class="todo-items">Todo 만들기</div>
+          <div class="todo-items">Todo 만들기</div>
+          <div class="todo-items">Todo 만들기</div>
+          <div class="todo-items">Todo 만들기</div>
+        </div>
+
+      </div>
+      <div class="todo-container">
+        <div class="todo-title">해야할일</div>
+        <div class="todo-contents">
+          <div class="todo-items">Todo 만들기</div>
+        </div>
+
+      </div>
+      <div class="todo-container">
+        <div class="todo-title">해야할일</div>
+        <div class="todo-contents">
+          <div class="todo-items">Todo 만들기</div>
+        </div>
+
+      </div>
     </div>
   </body>
 </html>
