Set the getInitialData method 값이 변경되기 전, 초기 데이터를 가지고 뷰를 그리는 로직을 준비하였습니다.

--- a/todo.html
+++ b/todo.html
@@ -54,6 +54,7 @@
                         <button class="btn-cancel-list" data="0">Cancel</button>
                     </div>
 
+                    <!-- list-wrapper child node -->
                     <div class="list-view">
                         <p class="title"><img src="/images/list_btn.png"> 테스트 제목</p>
 
