style : todo card 추가 레이아웃 작성
- todo card를 추가하는 레이아웃을 작성

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
             <div class="todo-header--add-button">+</div>
             <div class="todo-header--delete-button">-</div>
           </div>
+          <div class="add-todo-card">
+            <input type="text" class="add-todo-card__input" placeholder="Enter a note" />
+            <div class="add-todo-card__button-list">
+              <button class="add-button">Add</button>
+              <button class="cancel-button">Cancel</button>
+            </div>
+          </div>
           <div class="todo-card">
             <div class="todo-card--content">PR 날리기</div>
             <div class="todo-card--writter">puba</div>
