--- a/todo.html
+++ b/todo.html
@@ -29,58 +29,8 @@
             </div>
         </div>
 
-        <!-- 컨텐츠 영역(카드) : 일단 형태만 -->
+        <!-- 컨텐츠 영역(카드) -->
         <div class="card-wrapper flex-left">
-
-            <!-- 리스트뷰 1개 레이아웃 -->
-            <!--
-            <div class="card" data="0">
-                <div class="card-header">
-                    <span class="card-count bold" data="0">3</span>
-                    <span class="title bold">해야할일</span>
-                    <button class="close-btn htop">
-                        <img class="card-plus" data="0" src="/images/plus_btn.png">
-                        <img class="card-remove" data="0" src="/images/close_btn.png">
-                    </button>
-                </div>
-
-                <div class="list-wrapper" data="0">
-                    <div class="input-list-view" data="0">
-                        <div class="list-input-wrapper">
-                            <textarea class="list-input" data="0" type="text" maxlength="500"
-                                placeholder="Enter a note"></textarea>
-                        </div>
-                        <button class="btn-add-list" data="0" disabled>Add</button>
-                        <button class="btn-cancel-list" data="0">Cancel</button>
-                    </div>
-
-                    <div class="list-view" data="0">
-                        <p class="title"><img src="/images/list_btn.png"> 테스트 제목</p>
-
-                        <ul class="task sub-title font-15">
-                            <li>하위 태스크</li>
-                        </ul>
-
-                        <p class="author sub-title font-15">Added by abc</p>
-                        <button class="close-btn">
-                            <img src="/images/close_btn.png">
-                        </button>
-                    </div>
-                    <div class="list-view">
-                        <p class="title"><img src="/images/list_btn.png"> 테스트 제목</p>
-
-                        <ul class="task sub-title font-15">
-                            <li>하위 태스크</li>
-                        </ul>
-
-                        <p class="author sub-title font-15">Added by abc</p>
-                        <button class="close-btn">
-                            <img src="/images/close_btn.png">
-                        </button>
-                    </div>
-                </div>
-            </div> -->
-
         </div>
     </div>
 </body>
