create mock server using json-server

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,26 @@
     <div class="filter-contatiner">
     </div>
     <div class="contents">
+      <div class="todo-container">
+        <div class="todo-title">
+          <div class="title-li title-img">
+            <svg class="svg-class">
+              <circle cx="13" cy="13" r="13" fill="#c9cdd3" />
+            </svg>
+          </div>
+          <div class="title-li title-number">2</div>
+          <div class="title-li title-text">해야할일</div>
+          <div class="title-li title-add">+</div>
+          <div class="title-li title-delete">x</div>
+          
+        </div>
+        <div class="todo-contents">
+          <div class="todo-items">
+            Todo 만들기
+            <div class="todo-author"> Added by Kevin</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
