Make add column view

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <header></header>
-    <div class="container"></div>
+    <div class="container">
+        <div class="add-column">
+            Click to add column.
+        </div>
+    </div>
 </body>
 </html>
