style : 칸반 보드 추가 버튼 생성
- 칸반 보드를 추가하는 버튼 생성

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div class="kanban-board">
       <div class="kanban-board__header">
         <div class="search-box">Filter cards</div>
+        <div class="add-kanban-button">kanban board 추가</div>
       </div>
       <div class="todo-list">
         <div class="todo">
