Add filter logic

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <header></header>
+    <div class="filter-cards-container">
+        <div class="filter-cards">
+            <div class="search-icon">&#x1F50D;</div>
+            <input placeholder="찾으려는 노트를 검색하세요." class="filter-cards__input">
+        </div>
+    </div>
     <div class="container">
 
     </div>
