--- a/client/todo.html
+++ b/client/todo.html
@@ -11,6 +11,16 @@
 
 <body>
     <div id="root">
+
+        <!-- Modal (hidden) -->
+        <div id="list-modal" class="modal none">
+            <div class="modal-content">
+                <p class="mg-bottom-10">해당 아이템을 삭제하시겠습니까?</p>
+                <button class="btn-accept-modal">예</button>
+                <button class="btn-close-modal">아니오</button>
+            </div>
+        </div>
+
         <!-- 상단 헤더 부분 -->
         <div id="header">
             <div class="bg-black">
