이전 적용사항들 다시 일괄 commit 잘못된 디렉토리에서 커밋을 하고 있어서 새 수정사항들을 일괄적으로 반영하였습니다.

--- a/client/todo.html
+++ b/client/todo.html
@@ -14,10 +14,23 @@
 
         <!-- Modal (hidden) -->
         <div id="list-modal" class="modal none">
-            <div class="modal-content">
-                <p class="mg-bottom-10">해당 아이템을 삭제하시겠습니까?</p>
+            <div class="modal-remove none">
+                <p class="mg-bottom-10">선택하신 카드를 삭제하시겠습니까?</p>
                 <button class="btn-accept-modal">예</button>
                 <button class="btn-close-modal">아니오</button>
+            </div>
+            <div class="modal-edit none">
+                <div class="modal-header">
+                    <span class="modal-header-title">Edit note</span>
+                    <button class="btn-edit-close-modal">&times;</button>
+                </div>
+                <div class="modal-input-wrapper">
+                    <textarea class="modal-input" maxlength="500"
+                    placeholder="수정할 제목을 입력하세요."></textarea>
+                </div>
+                <div class="modal-save-wrapper">
+                    <button class="btn-save-modal">Save note</button>
+                </div>
             </div>
         </div>
 
