--- a/public/index.html
+++ b/public/index.html
@@ -24,28 +24,7 @@
         <div class="search-box">Filter cards</div>
         <div class="add-kanban-button">kanban board 추가</div>
       </div>
-      <div class="todo-list">
-        <div class="todo">
-          <div class="todo-header">
-            <div class="todo-header--total-count">3</div>
-            <div class="todo-header--title">해야할 일</div>
-            <div class="todo-header--add-button">+</div>
-            <div class="todo-header--delete-button">-</div>
-          </div>
-          <div class="add-todo-card">
-            <input type="text" class="add-todo-card__input" placeholder="Enter a note" />
-            <div class="add-todo-card__button-list">
-              <button class="add-button">Add</button>
-              <button class="cancel-button">Cancel</button>
-            </div>
-          </div>
-          <div class="todo-card">
-            <div class="todo-card--content">PR 날리기</div>
-            <div class="todo-card--writter">puba</div>
-            <div class="todo-card--delete-button">x</div>
-          </div>
-        </div>
-      </div>
+      <div class="todo-list"></div>
     </div>
   </body>
 </html>
