Refactoring: remove magic number

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="navbar-title">TODO 서비스</div>
+      <div class="navbar-title">하노이탑</div>
       <div class="navbar-menu">menu</div>
     </div>
     <div class="filter-contatiner">
