bugfix : 새 카드 추가 시 모달 간섭 수정 새로운 카드 추가 시 다른 것도 변경되는 오류를 수정하였습니다.

--- a/client/todo.html
+++ b/client/todo.html
@@ -21,15 +21,16 @@
             </div>
             <div class="modal-edit none">
                 <div class="modal-header">
-                    <span class="modal-header-title">Edit note</span>
+                    <span class="modal-header-title"></span>
                     <button class="btn-edit-close-modal">&times;</button>
                 </div>
                 <div class="modal-input-wrapper">
                     <textarea class="modal-input" maxlength="500"
-                    placeholder="수정할 제목을 입력하세요."></textarea>
+                    placeholder="제목을 입력하세요."></textarea>
                 </div>
                 <div class="modal-save-wrapper">
-                    <button class="btn-save-modal">Save note</button>
+                    <button class="btn-save-modal">저장하기</button>
+                    <button class="btn-write-modal none">추가하기</button>
                 </div>
             </div>
         </div>
