Add sidemenu ui

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="title">TODO</div>
+        <div class="button">☰</div>
+    </header>
+    <div class="side-menu">
+        <div class="side-menu__header">
+            <div class="title">☰ Menu</div>
+            <div class="close-button">✕</div>            
+        </div>
+        <div class="activity">🔔 Activity</div>
+        <ul class="activity-card-list">
+            <li class="activity-card">
+                <div class="content">
+                    @nina moved the column 하는중.
+                </div>
+                <div class="time">1 day ago.</div>
+            </li>
+        </ul>
+    </div>
     <div class="filter-cards-container">
         <div class="filter-cards">
             <div class="search-icon">&#x1F50D;</div>
