--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,22 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="navbar-title">하노이탑</div>
+      <div class="navbar-title">Todo 서비스</div>
       <div class="navbar-menu">menu</div>
+      <div class="activity-in">
+        <div class="activity-title">
+          <span>Menu</span>
+          <span class="activity-close">✕</span>
+        </div>
+        <div class="activity-title">Activity</div>
+        <div class="activity-item">
+          <div class="item-title">
+            <span class="item-bold">@kevin</span>
+            <span>moved the columed the colued the colun 하는 중</span>
+          </div>
+          <div class="item-timelog">38 second ago</div>
+        </div>
+      </div>
     </div>
     <div class="filter-contatiner">
     </div>
