--- a/client/todo.html
+++ b/client/todo.html
@@ -14,8 +14,13 @@
 
         <!-- Modal (hidden) -->
         <div id="list-modal" class="modal none">
+            <div class="modal-card-remove none">
+                <p class="mg-bottom-10">선택하신 <b>카드를</b> 삭제하시겠습니까?</p>
+                <button class="btn-card-accept">예</button>
+                <button class="btn-card-close">아니오</button>
+            </div>
             <div class="modal-remove none">
-                <p class="mg-bottom-10">선택하신 카드를 삭제하시겠습니까?</p>
+                <p class="mg-bottom-10">선택하신 <b>노트를</b> 삭제하시겠습니까?</p>
                 <button class="btn-accept-modal">예</button>
                 <button class="btn-close-modal">아니오</button>
             </div>
