implement activity model

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,14 @@
           <span class="activity-close">✕</span>
         </div>
         <div class="activity-title">Activity</div>
-        <div class="activity-item">
-          <div class="item-title">
-            <span class="item-bold">@kevin</span>
-            <span>moved the columed the colued the colun 하는 중</span>
+        <div class="activity-contents">
+          <div class="activity-item">
+            <div class="item-title">
+              <span class="item-bold">@kevin</span>
+              <span>moved the columed the colued the colun 하는 중</span>
+            </div>
+            <div class="item-timelog">38 second ago</div>
           </div>
-          <div class="item-timelog">38 second ago</div>
         </div>
       </div>
     </div>
