--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,8 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <div class="pop-up">
-      <!-- <div class="pop-up__background"></div>
-      <div class="pop-up__content">
-        <div class="pop-up__title">New kanban board</div>
-        <input type="text" class="add-new-kanban__input" placeholder="new board name" />
-        <div class="add-new-kanban__button-list">
-          <button class="add-button">Add</button>
-          <button class="cancel-button">Cancel</button>
-        </div>
-      </div> -->
-    </div>
+    <div class="pop-up"></div>
+    <div class="menu-pop-up"></div>
     <div class="header">
       <div class="header__title">TODO 서비스</div>
       <div class="header__menu-button">menu</div>
