Implementation of activity DB initialization function

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
           <span>Menu</span>
           <span class="activity-close">✕</span>
         </div>
-        <div class="activity-title">Activity</div>
+        <div class="activity-title">
+          <span>Activity</span>
+          <span class="activity-clear">Clear</span>
+        </div>
         <div class="activity-contents"></div>
       </div>
     </div>
