--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
   </head>
   <body>
     <div class="pop-up"></div>
-    <div class="menu-pop-up"></div>
+    <div class="menu-pop-up">
+      <div class="menu-pop-up__header">
+        <div class="menu-pop-up__title">menu</div>
+        <div class="menu-pop-up__close-button">x</div>
+      </div>
+      <ul class="menu-detail">
+        <div class="menu-detail__header">Activity</div>
+        <li class="menu-detail__item">
+          <span class="user-id">puba</span>
+          <span class="user-activity">added</span>
+          <span class="card">감사</span>
+        </li>
+      </ul>
+    </div>
     <div class="header">
       <div class="header__title">TODO 서비스</div>
       <div class="header__menu-button">menu</div>
