Add sidemenu logic

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="title">TODO</div>
-        <div class="button">☰</div>
+        <div class="menu-button">☰</div>
     </header>
     <div class="side-menu">
         <div class="side-menu__header">
@@ -16,14 +16,7 @@
             <div class="close-button">✕</div>            
         </div>
         <div class="activity">🔔 Activity</div>
-        <ul class="activity-card-list">
-            <li class="activity-card">
-                <div class="content">
-                    @nina moved the column 하는중.
-                </div>
-                <div class="time">1 day ago.</div>
-            </li>
-        </ul>
+        <ul class="activity-card-list"></ul>
     </div>
     <div class="filter-cards-container">
         <div class="filter-cards">
@@ -32,7 +25,6 @@
         </div>
     </div>
     <div class="container">
-
     </div>
     <div class="modal-container"></div>
 </body>
