style : 말풍선 제작
- 메뉴 탭 내에 말풍선 제작

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       </div>
       <ul class="menu-detail">
         <div class="menu-detail__header">Activity</div>
-        <li class="menu-detail__item">
+        <li class="balloon">
           <span class="user-id">puba</span>
           <span class="user-activity">added</span>
           <span class="card">감사</span>
