style : 더 카톡스러운 말풍선으로 디자인 수정
- 카톡스러운 말풍선으로 디자인 수정

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,33 @@
       </div>
       <ul class="menu-detail">
         <div class="menu-detail__header">Activity</div>
-        <li class="balloon">
-          <span class="user-id">puba</span>
-          <span class="user-activity">added</span>
-          <span class="card">감사</span>
+        <li class="menu-detail__item">
+          <img
+            class="user-image"
+            src="https://avatars.githubusercontent.com/u/37804777?s=460&u=088956f4c1a3613536ddb54dac7492b469a12ca9&v=4"
+            alt=""
+          />
+          <div class="activity-content">
+            <div class="user-id">puba</div>
+            <div class="balloon">
+              <span class="user-activity">added</span>
+              <span class="card">감사</span>
+            </div>
+          </div>
+        </li>
+        <li class="menu-detail__item">
+          <img
+            class="user-image"
+            src="https://avatars.githubusercontent.com/u/37804777?s=460&u=088956f4c1a3613536ddb54dac7492b469a12ca9&v=4"
+            alt=""
+          />
+          <div class="activity-content">
+            <div class="user-id">puba</div>
+            <div class="balloon">
+              <span class="user-activity">added</span>
+              <span class="card">감사</span>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
