webpack setup for scss

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <div class="navbar-menu">menu</div>
       <div class="activity-container non-display">
         <div class="activity-title">
-          <span>Menu</span>
+          <span>&equiv; Menu</span>
           <span class="activity-close">✕</span>
         </div>
         <div class="activity-title">
