--- a/client/todo.html
+++ b/client/todo.html
@@ -40,6 +40,24 @@
             </div>
         </div>
 
+        <!-- 우측 menuBar 부분 -->
+        <div id="menuBar" class="menu-wrapper">
+            <div class="menu menu-header">&#9776; Menu</div>
+            <div class="menu menu-subject">&#10004; Activity</div>
+            <div class="menu-item-wrapper">
+                <div class="menu-item relative">
+                    <img class="profile" src="images/jackson.png">
+                    <p class="menu-text history">움직였음</p>
+                    <p class="menu-text time">38 seconds ago</p>
+                </div>
+                <div class="menu-item relative">
+                    <img class="profile" src="images/jackson.png">
+                    <p class="menu-text history">움직였음</p>
+                    <p class="menu-text time">38 seconds ago</p>
+                </div>
+            </div>
+        </div>
+
         <!-- 상단 헤더 부분 -->
         <div id="header">
             <div class="bg-black">
@@ -48,6 +66,7 @@
                 <div id="menu" class="float-right font-white mg-right-40">menu</div>
             </div>
         </div>
+
         <!-- 검색창(Filter) 부분 -->
         <div class="search-blank mg-10 block relative">
             <div class="search-box">
