MenuView에 필요한 매직 넘버 별도 관리 MenuView를 init할 때 매직 넘버를 같이 넘겨서 별도로 관리할 수 있게 하였고, 타입스크립트를 정의하였습니다.

--- a/client/todo.html
+++ b/client/todo.html
@@ -42,7 +42,12 @@
 
         <!-- 우측 menuBar 부분 -->
         <div id="menuBar" class="menu-wrapper">
-            <div class="menu menu-header">&#9776; Menu</div>
+            <div class="menu menu-header">
+                <div class="float-left">&#9776; Menu</div>
+                <div class="float-right">
+                    <button class="menu-close">&times;</button>
+                </div>
+            </div>
             <div class="menu menu-subject">&#10004; Activity</div>
             <div class="menu-item-wrapper">
                 <div class="menu-item relative">
@@ -63,7 +68,7 @@
             <div class="bg-black">
                 <div class="float-left font-white mg-left-40">TODO 서비스</div>
                 <!-- menu(todo)-->
-                <div id="menu" class="float-right font-white mg-right-40">menu</div>
+                <div id="menuBtn" class="float-right font-white mg-right-40">menu</div>
             </div>
         </div>
 
