--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,7 @@
         <div class="menu-pop-up__close-button">x</div>
       </div>
       <ul class="menu-detail">
-        <div class="menu-detail__header">Activity</div>
-        <li class="menu-detail__item">
-          <img
-            class="user-image"
-            src="https://avatars.githubusercontent.com/u/37804777?s=460&u=088956f4c1a3613536ddb54dac7492b469a12ca9&v=4"
-            alt=""
-          />
-          <div class="activity-content">
-            <div class="user-id">puba</div>
-            <div class="balloon">
-              <span class="user-activity">added</span>
-              <span class="card">감사</span>
-            </div>
-          </div>
-        </li>
-        <li class="menu-detail__item">
-          <img
-            class="user-image"
-            src="https://avatars.githubusercontent.com/u/37804777?s=460&u=088956f4c1a3613536ddb54dac7492b469a12ca9&v=4"
-            alt=""
-          />
-          <div class="activity-content">
-            <div class="user-id">puba</div>
-            <div class="balloon">
-              <span class="user-activity">added</span>
-              <span class="card">감사</span>
-            </div>
-          </div>
-        </li>
+        <!-- <div class="menu-detail__header">Activity</div> -->
       </ul>
     </div>
     <div class="header">
