ModalView 관련 기능 리팩토링 중

--- a/client/todo.html
+++ b/client/todo.html
@@ -26,16 +26,28 @@
             </div>
             <div class="modal-edit none">
                 <div class="modal-header">
-                    <span class="modal-header-title"></span>
+                    <span class="modal-edit-header-title"></span>
                     <button class="btn-edit-close-modal">&times;</button>
                 </div>
                 <div class="modal-input-wrapper">
-                    <textarea class="modal-input" maxlength="500"
+                    <textarea class="modal-edit-input" maxlength="500"
                     placeholder="제목을 입력하세요."></textarea>
                 </div>
                 <div class="modal-save-wrapper">
                     <button class="btn-save-modal">저장하기</button>
-                    <button class="btn-write-modal none">추가하기</button>
+                </div>
+            </div>
+            <div class="modal-new-card none">
+                <div class="modal-header">
+                    <span class="modal-new-header-title">카드 추가하기</span>
+                    <button class="btn-new-close-modal">&times;</button>
+                </div>
+                <div class="modal-input-wrapper">
+                    <textarea class="modal-new-input" maxlength="500"
+                    placeholder="제목을 입력하세요."></textarea>
+                </div>
+                <div class="modal-save-wrapper">
+                    <button class="btn-write-modal">추가하기</button>
                 </div>
             </div>
         </div>
