--- a/client/todo.html
+++ b/client/todo.html
@@ -35,6 +35,7 @@
                 </div>
                 <div class="modal-save-wrapper">
                     <button class="btn-save-modal">저장하기</button>
+                    <button class="btn-save-note-modal none">저장하기</button>
                 </div>
             </div>
             <div class="modal-new-card none">
