column edit modal window event handling

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <title></title>
   </head>
   <body>
+    <div class="column-modal non-display">
+      <div class="column-head">
+        <div class="column-title"> Edit 다했어</div>
+        <div class="column-cancel">✕</div>
+      </div>
+      <div class="column-text">Column name</div>
+      <input class="column-input" id="column-name"></input>
+      <button class="update-btn">Update column</button>
+    </div>
     <div class="navbar">
       <div class="navbar-title">Todo 서비스</div>
       <div class="navbar-menu">menu</div>
