새로운 css 정의 추후에 구현할 히스토리 삭제 부분을 구성하였습니다.

--- a/client/todo.html
+++ b/client/todo.html
@@ -61,7 +61,12 @@
                     <button class="menu-close">&times;</button>
                 </div>
             </div>
-            <div class="menu menu-subject">&#10004; Activity</div>
+            <div class="menu menu-subject">
+                <div class="float-left">&#10004; Activity</div>
+                <div class="float-right">
+                    <button class="menu-history-remove">히스토리 삭제</button>
+                </div>
+            </div>
             <div class="menu-item-wrapper">
             </div>
         </div>
